[gd_scene load_steps=18 format=3 uid="uid://dsfuqpt2mcmyq"]

[ext_resource type="Script" path="res://scripts/gameScene.gd" id="1_n30sc"]
[ext_resource type="Texture2D" uid="uid://dxxx4me2bgok8" path="res://images/animal1.png" id="2_6p6dh"]
[ext_resource type="PackedScene" uid="uid://c71hfeo5hkdb8" path="res://scenes/block.tscn" id="2_d4hq7"]
[ext_resource type="Texture2D" uid="uid://bhm7qmc8txpjy" path="res://images/animal2.png" id="3_0bfkk"]
[ext_resource type="Texture2D" uid="uid://icok1f0kxnss" path="res://images/animal3.png" id="4_b46nl"]
[ext_resource type="Texture2D" uid="uid://clh4udgmrbt5x" path="res://images/animal4.png" id="5_6uqjl"]
[ext_resource type="Texture2D" uid="uid://pocdwts4c8wu" path="res://images/animal5.png" id="6_nlylk"]
[ext_resource type="Texture2D" uid="uid://2n7rsnrtsy6" path="res://images/heart.png" id="8_2xpgx"]
[ext_resource type="Texture2D" uid="uid://bexdkjftc2q7i" path="res://images/animal6.png" id="8_y44lk"]
[ext_resource type="PackedScene" uid="uid://b0frkahwwidfn" path="res://scenes/gameOverScreen.tscn" id="9_5dyem"]
[ext_resource type="Texture2D" uid="uid://co8jkbyhi1fem" path="res://images/animal7.png" id="9_e6gml"]
[ext_resource type="Texture2D" uid="uid://gl42ljkt150x" path="res://images/animal8.png" id="10_8amg3"]
[ext_resource type="Texture2D" uid="uid://bmjp8rf6hujl3" path="res://images/animal9.png" id="11_guid3"]
[ext_resource type="Texture2D" uid="uid://dtgj674hr1lud" path="res://images/animal10.png" id="12_4vryk"]
[ext_resource type="Script" path="res://scripts/spawnerArea.gd" id="13_ig8lu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t51u"]
size = Vector2(590.44, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4m2j"]

[node name="GameNode" type="Node2D"]
script = ExtResource("1_n30sc")
blockLoad = ExtResource("2_d4hq7")
images = Array[Texture2D]([ExtResource("2_6p6dh"), ExtResource("3_0bfkk"), ExtResource("4_b46nl"), ExtResource("5_6uqjl"), ExtResource("6_nlylk"), ExtResource("8_y44lk"), ExtResource("9_e6gml"), ExtResource("10_8amg3"), ExtResource("11_guid3"), ExtResource("12_4vryk")])

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(74, -64)
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Spawner"]
scale = Vector2(1, 0.983019)
script = ExtResource("13_ig8lu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawner/Area2D"]
position = Vector2(295, 0)
scale = Vector2(1.067, 7)
shape = SubResource("RectangleShape2D_3t51u")

[node name="Spawner2" type="Node2D" parent="."]
position = Vector2(217, -64)
metadata/_edit_group_ = true

[node name="Spawner3" type="Node2D" parent="."]
position = Vector2(359, -64)
metadata/_edit_group_ = true

[node name="Spawner4" type="Node2D" parent="."]
position = Vector2(502, -64)
metadata/_edit_group_ = true

[node name="Spawner5" type="Node2D" parent="."]
position = Vector2(645, -64)
metadata/_edit_group_ = true

[node name="lostArea" type="Area2D" parent="."]
position = Vector2(358, 1156)
scale = Vector2(-12.6435, 5.50272)
input_pickable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="lostArea"]
scale = Vector2(3.44553, 0.294893)
shape = SubResource("RectangleShape2D_h4m2j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_top = 1139.0
offset_right = 726.0
offset_bottom = 1173.0

[node name="Points" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heart" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(32, 1224)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2xpgx")

[node name="Heart2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(96, 1224)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2xpgx")

[node name="Heart3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(160, 1224)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2xpgx")

[node name="GameOverLayer" parent="CanvasLayer" instance=ExtResource("9_5dyem")]
visible = false

[connection signal="areaClear" from="Spawner/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="Spawner/Area2D" to="Spawner/Area2D" method="emitSignal"]
[connection signal="area_entered" from="lostArea" to="." method="_on_lost_area_area_entered"]
[connection signal="TryAgainButtonPressed" from="CanvasLayer/GameOverLayer" to="." method="_on_game_over_layer_try_again_button_pressed"]
